<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:theme="@style/ThemeOverlay.Drawable.FullscreenContainer"
    tools:context=".DrawingCanvas">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/label"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/canvas"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-36dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/back"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/back_button"
            app:layout_constraintRight_toLeftOf="@id/pallete"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/drawingName"
            android:gravity="center"
            android:hint="@string/drawingHint"
            android:inputType="text"
            android:autofillHints="Title"
            android:textColor="@color/black"
            android:focusable="false"
            android:background="@android:color/transparent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageButton
            android:id="@+id/pallete"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/palette"
            android:contentDescription="@string/palette"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.example.drawable.CanvasView
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toTopOf="@id/toolbar"/>

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/canvas"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/label"
        android:orientation="horizontal"

        android:gravity="center">

        <ImageButton
            android:id="@+id/paintBrush"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/paint_brush"
            android:src="@drawable/paintbrush_default" />

        <ImageButton
            android:id="@+id/spraycan"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/spray_can"
            android:src="@drawable/spraycan_default" />

        <ImageButton
            android:id="@+id/eraser"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/eraser"
            android:src="@drawable/eraser_default" />

        <ImageButton
            android:id="@+id/paintBucket"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/paint_can"
            android:src="@drawable/bucket_fill_default" />

        <ImageButton
            android:id="@+id/blur"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/blur"
            android:src="@drawable/baseline_blur_on_24" />

        <ImageButton
            android:id="@+id/inverter"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/inverter"
            android:src="@drawable/inverter" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>