...
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/add_drawing"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:src="@drawable/add"
            android:contentDescription="@string/palette"
            android:background="@android:color/transparent"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/composeView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/bar"
        app:layout_constraintBottom_toBottomOf="parent"
        />

...
